--- a/src/components/view/ViewPage.module.scss
+++ b/src/components/view/ViewPage.module.scss
@@ -1,10 +1,11 @@
 .wrapper {
-  width: 2160px;
-  height: 3840px;
+  width: 100vw;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   background: linear-gradient(#545454, #ffffff);
   position: relative;
+  padding-bottom: 250px;
 }
 
 /* Контейнер блоков */
@@ -14,7 +15,7 @@
   align-items: center;
   gap: 0;
   width: 100%;
-  max-width: 2160px;
+  max-width: 100vw;
 }
 
 /* Верхний блок с названием */
@@ -37,7 +38,7 @@
   font-weight: 900;
   font-size: 120px;
   line-height: 90px;
-  color: #33231C;
+  color: #33231c;
   text-align: center;
   padding-bottom: 100px;
 }
@@ -46,7 +47,6 @@
 .gallery {
   width: 100%;
   height: 1900px;
-  background-color: rgba(8, 14, 14, 0.336);
 }
 
 .gallery_view {
@@ -60,7 +60,7 @@
   width: 603px;
   height: 105px;
   border-radius: 100px;
-  background-color: #33231C;
+  background-color: #33231c;
   color: #fff;
   font-family: 'Mulish', sans-serif;
   font-weight: 400;
@@ -80,7 +80,7 @@
   width: 385px;
   height: 105px;
   border-radius: 100px;
-  background-color: #33231C;
+  background-color: #33231c;
   color: #fff;
   font-family: 'Mulish', sans-serif;
   font-weight: 400;
@@ -93,8 +93,9 @@
   justify-content: center;
   align-items: center;
   position: absolute;
-  bottom: 60px;
-  left: 887px;
+  bottom: 120px;
+  left: 50%;
+  transform: translateX(-50%);
 }
 
 /* Оверлей */
@@ -122,7 +123,7 @@
   font-size: 45px;
   line-height: 60px;
   font-family: 'Mulish', sans-serif;
-  color: #33231C;
+  color: #33231c;
   overflow-y: auto;
 }
 
@@ -140,12 +141,88 @@ h3 {
   height: 35px;
   background: none;
   border: none;
-  font-size: 60px;  /* увеличенный для жирности */
+  font-size: 60px; /* увеличенный для жирности */
   font-weight: 900;
-  color: #33231C;
+  color: #33231c;
   cursor: pointer;
   display: flex;
   align-items: center;
   justify-content: center;
   padding: 0;
+}
+
+.status {
+  font-family: 'Mulish', sans-serif;
+  font-size: 48px;
+  color: #ffffff;
+  text-align: center;
+  margin-top: 400px;
+}
+
+/* Адаптивность для больших экранов */
+@media (min-width: 2560px) {
+  .block1 {
+    width: 2000px;
+    height: 900px;
+    margin-bottom: 800px;
+  }
+
+  .block1Content {
+    font-size: 140px;
+    line-height: 100px;
+    padding-bottom: 120px;
+  }
+
+  .gallery {
+    height: 2200px;
+  }
+
+  .gallery_view {
+    height: 1800px;
+  }
+
+  .gallery_button {
+    width: 700px;
+    height: 120px;
+    font-size: 48px;
+    margin: 160px auto 0;
+  }
+
+  .backButton {
+    width: 450px;
+    height: 120px;
+    font-size: 48px;
+    bottom: 140px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .overlay {
+    width: 100%;
+    height: 60%;
+    margin-top: 40%;
+  }
+
+  .panel {
+    width: 2000px;
+    height: 1400px;
+    padding: 120px;
+    font-size: 50px;
+    line-height: 70px;
+  }
+
+  .closeX {
+    top: 70px;
+    right: 70px;
+    font-size: 70px;
+  }
+
+  h3 {
+    margin-bottom: 50px;
+  }
+
+  .status {
+    font-size: 60px;
+    margin-top: 500px;
+  }
 }
